# termony

./: .gitignore  Cargo.toml  LICENSE  README.md
Formula/: vyom.rb
examples/: reproduce_issue.rs
src/: app.rs  artwork.rs  lyrics.rs  main.rs  player.rs  spotify.rs  theme.rs  ui.rs
