[package]
name = "vyom"
version = "0.1.0"
edition = "2021"
description = "A minimalist, transparent Spotify music player for tmux with Catppuccin theming."
license = "MIT"
repository = "https://github.com/MrSyr3x/termony.git"
keywords = ["tmux", "spotify", "music", "tui", "ratatui"]
categories = ["command-line-utilities", "multimedia"]
exclude = ["images/*", ".github/*"]
publish = false

[dependencies]
ratatui = { version = "0.29.0", features = ["serde"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
tokio = { version = "1.42.0", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json"] }
image = "0.25"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
anyhow = "1.0.94"
open = "5.3.1"
base64 = "0.22.1"
futures = "0.3.31"
toml = "0.9.10"

